deverlop searsh wagon

--- a/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
@@ -170,33 +170,40 @@
                                     <div class="row">
                                         <div class="col-xl-12">
                                             <div id="table_detali_wio">
-                                                <nav>
-                                                    <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                                                        <a class="nav-item nav-link active" id="nav-arrival-tab" data-toggle="tab" href="#nav-arrival" role="tab" aria-controls="nav-arrival" aria-selected="true">Прибытие</a>
-                                                        <a class="nav-item nav-link" id="nav-wim-tab" data-toggle="tab" href="#nav-wim" role="tab" aria-controls="nav-wim" aria-selected="false">Дислокация</a>
-                                                        <a class="nav-item nav-link" id="nav-wio-tab" data-toggle="tab" href="#nav-wio" role="tab" aria-controls="nav-wio" aria-selected="false">Операции</a>
-                                                        <a class="nav-item nav-link" id="nav-outgoing-tab" data-toggle="tab" href="#nav-outgoing" role="tab" aria-controls="nav-outgoing" aria-selected="true">Отправление</a>
-                                                    </div>
-                                                </nav>
-                                                <div class="tab-content" id="nav-tabContent">
-                                                    <div class="tab-pane fade show active" id="nav-arrival" role="tabpanel" aria-labelledby="nav-arrival-tab">...</div>
-                                                    <div class="tab-pane fade" id="nav-wim" role="tabpanel" aria-labelledby="nav-wim-tab">...</div>
-                                                    <div class="tab-pane fade" id="nav-wio" role="tabpanel" aria-labelledby="nav-wio-tab">...</div>
-                                                    <div class="tab-pane fade" id="nav-outgoing" role="tabpanel" aria-labelledby="nav-outgoing-tab">...</div>
-                                                </div>
+
                                             </div>
                                         </div>
                                     </div>
                                     @*<div class="row">
-                                            <div class="col-xl-12 operator-detali-tables">
-                                                <table class="display compact cell-border row-border hover" id="table_detali_wio" style="width:100%;"></table>
+                                        <div class="col-xl-12">
+                                            <div id="table_detali_wio-1">
+                                                <nav>
+                                                    <div class="nav nav-tabs" id="nav-tab-1" role="tablist">
+                                                        <a class="nav-item nav-link active" id="nav-arrival-1-tab" data-toggle="tab" href="#nav-arrival-1" role="tab" aria-controls="nav-arrival-1" aria-selected="true">Прибытие</a>
+                                                        <a class="nav-item nav-link" id="nav-wim-1-tab" data-toggle="tab" href="#nav-wim-1" role="tab" aria-controls="nav-wim-1" aria-selected="false">Дислокация</a>
+                                                        <a class="nav-item nav-link" id="nav-wio-1-tab" data-toggle="tab" href="#nav-wio-1" role="tab" aria-controls="nav-wio-1" aria-selected="false">Операции</a>
+                                                        <a class="nav-item nav-link" id="nav-outgoing-1-tab" data-toggle="tab" href="#nav-outgoing-1" role="tab" aria-controls="nav-outgoing-1" aria-selected="true">Отправление</a>
+                                                    </div>
+                                                </nav>
+                                                <div class="tab-content" id="nav-tabContent">
+                                                    <div class="tab-pane fade show active" id="nav-arrival-1" role="tabpanel" aria-labelledby="nav-arrival-1-tab">arrival...</div>
+                                                    <div class="tab-pane fade" id="nav-wim-1" role="tabpanel" aria-labelledby="nav-wim-1-tab">wim...</div>
+                                                    <div class="tab-pane fade" id="nav-wio-1" role="tabpanel" aria-labelledby="nav-wio-1-tab">wio...</div>
+                                                    <div class="tab-pane fade" id="nav-outgoing-1" role="tabpanel" aria-labelledby="nav-outgoing-1-tab">outgoing...</div>
+                                                </div>
                                             </div>
                                         </div>
-                                        <div class="row">
-                                            <div class="col-xl-12 operator-detali-tables">
-                                                <table class="display compact cell-border row-border hover" id="table_detali_wim" style="width:100%;"></table>
-                                            </div>
-                                        </div>*@
+                                    </div>*@
+                                    @*<div class="row">
+            <div class="col-xl-12 operator-detali-tables">
+                <table class="display compact cell-border row-border hover" id="table_detali_wio" style="width:100%;"></table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xl-12 operator-detali-tables">
+                <table class="display compact cell-border row-border hover" id="table_detali_wim" style="width:100%;"></table>
+            </div>
+        </div>*@
                                 </div>
                                 <div class="tab-pane fade" id="pills-outgoing" role="tabpanel" aria-labelledby="pills-outgoing-tab">
                                     <div class="row">
