--- a/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
@@ -156,7 +156,7 @@
                                 <div class="tab-pane fade" id="pills-arrival" role="tabpanel" aria-labelledby="pills-arrival-tab">
                                     <div class="row">
                                         <div class="col-xl-12 operator-detali-tables">
-                                            <table class="display compact cell-border row-border hover" id="table_arrival_wagon" style="width:100%;"></table>
+                                            <table class="display compact cell-border row-border hover" id="tab_arr" style="width:100%;"></table>
                                         </div>
 
                                     </div>
@@ -164,16 +164,16 @@
                                 <div class="tab-pane fade" id="pills-wir" role="tabpanel" aria-labelledby="pills-wir-tab">
                                     <div class="row">
                                         <div class="col-xl-12 operator-detali-tables">
-                                            <table class="display compact cell-border row-border hover" id="table_wir" style="width:100%;"></table>
+                                            <table class="display compact cell-border row-border hover" id="tab_wir" style="width:100%;"></table>
                                         </div>
                                     </div>
-                                    <div class="row">
+                                    @*<div class="row">
                                         <div class="col-xl-12">
                                             <div id="table_detali_wio">
 
                                             </div>
                                         </div>
-                                    </div>
+                                    </div>*@
                                     @*<div class="row">
                                         <div class="col-xl-12">
                                             <div id="table_detali_wio-1">
@@ -208,7 +208,7 @@
                                 <div class="tab-pane fade" id="pills-outgoing" role="tabpanel" aria-labelledby="pills-outgoing-tab">
                                     <div class="row">
                                         <div class="col-xl-12 operator-detali-tables">
-                                            <table class="display compact cell-border row-border hover" id="table_outgoing_wagon" style="width:100%;"></table>
+                                            <table class="display compact cell-border row-border hover" id="tab_out" style="width:100%;"></table>
                                         </div>
                                     </div>
                                 </div>
