--- a/WEB_UI/Content/view/idsrwt/wsd.css
+++ b/WEB_UI/Content/view/idsrwt/wsd.css
@@ -58,6 +58,10 @@ body {
     position: fixed !important;
 }
 
+.table td {
+    padding:.15rem;
+}
+
 td.station-control {
     background: url('../../../Content/DataTables/media/images/details_open.png') no-repeat center center;
     width: 20px;
