--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -117,6 +117,8 @@
                 <div class="card-body text-dark pl-3 pr-3">
                     <div class="row">
                         <div class="col-xl-4">
+                            <div id="tree-way"></div>
+
                             <div class="card border-primary">
                                 <div class="card-header">Дерево путей</div>
                                 <div class="card-body">
