--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -119,7 +119,7 @@
                         <div class="col-xl-4">
                             <div id="tree-way"></div>
 
-                            <div class="card border-primary">
+                            @*<div class="card border-primary">
                                 <div class="card-header">Дерево путей</div>
                                 <div class="card-body">
                                     <div class="row">
@@ -129,7 +129,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div>*@
                         </div>
                         <div class="col-xl-8">
                             <div class="card border-info">
