--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -117,19 +117,17 @@
                 <div class="card-body text-dark pl-3 pr-3">
                     <div class="row">
                         <div class="col-xl-4">
-                            <div id="tree-way"></div>
-
-                            @*<div class="card border-primary">
+                            <div class="card border-primary">
                                 <div class="card-header">Дерево путей</div>
                                 <div class="card-body">
                                     <div class="row">
-                                        <div class="col-xl-12 text-left">
-                                            <table id="tree-way" class="table table-hover">
-                                            </table>
+                                        <div class="col-xl-12">
+                                            <div id="tree-way"></div>
+                                            @*<table id="tree-way" class="table table-hover"></table>*@
                                         </div>
                                     </div>
                                 </div>
-                            </div>*@
+                            </div>
                         </div>
                         <div class="col-xl-8">
                             <div class="card border-info">
