--- a/WEB_UI/Content/view/idsrwt/wsd.css
+++ b/WEB_UI/Content/view/idsrwt/wsd.css
@@ -1,4 +1,4 @@
-﻿@import url("../../font-awesome/css/font-awesome.min.css");
+﻿/*@import url("../../font-awesome/css/font-awesome.min.css");*/
 
 body {
 }
@@ -400,4 +400,38 @@ table.dataTable.display tbody tr:not(.selected).odd.handed-wagon > .sorting_1, t
 
 table.dataTable.display tbody tr:not(.selected).even.handed-wagon > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.handed-wagon > .sorting_1 {
     background-color: #aecd5a;
+}
+
+/*Для выбора станций*/
+.checkbox-menu li label {
+    display: block;
+    padding: 3px 10px;
+    clear: both;
+    font-weight: normal;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+    margin: 0;
+    transition: background-color .4s ease;
+}
+
+.checkbox-menu li input {
+    margin: 0px 5px;
+    top: 2px;
+    position: relative;
+}
+
+.checkbox-menu li.active label {
+    background-color: #cbcbff;
+    font-weight: bold;
+}
+
+.checkbox-menu li label:hover,
+.checkbox-menu li label:focus {
+    background-color: #f5f5f5;
+}
+
+.checkbox-menu li.active label:hover,
+.checkbox-menu li.active label:focus {
+    background-color: #b8b8ff;
 }
