--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -122,9 +122,7 @@
                         <div class="col-xl-4">
                             <div class="card border-primary">
                                 <div class="card-header">
-                                    <div id="dds-station">
-
-                                    </div>
+                                    <div id="dds-station"></div>
                                     @*<div class="dropdown">
                                             <button class="btn btn-default dropdown-toggle" type="button"
                                                     id="sel_station" data-toggle="dropdown"
@@ -158,8 +156,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-xl-12">
-                                            <div id="tree-way">
-                                            </div>
+                                            <div id="tree-way"></div>
                                             @*<table id="tree-way" class="table table-hover"></table>*@
                                         </div>
                                     </div>
