--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -7,6 +7,9 @@
     @Styles.Render("~/DataTables/css")
     @Styles.Render("~/DateTime/css")
     <link rel="stylesheet" type="text/css" href="~/Content/view/idsrwt/wsd.css">
+    @*Подключим модули*@
+    <link href="~/Content/module/cblist_station.css" rel="stylesheet" />
+    <link href="~/Content/module/table_tree_way.css" rel="stylesheet" />
 
 
 }
@@ -26,6 +29,9 @@
     <script src="~/Scripts/api/ids_rwt.js"></script> <!-- Class API ИДС Прием вагонов -->
     <script src="~/Scripts/api/ids_transfer.js"></script> <!-- Class API ИДС Переносы -->
     <script src="~/Scripts/api/uz_sms.js"></script> <!-- Class API Работа с модулем согласования -->
+    @*Подключим модули*@
+    <script src="~/Scripts/module/cblist_station.js"></script>
+    <script src="~/Scripts/module/table_tree_way.js"></script>
 
     <script src="~/Scripts/plugins/pl_dialog_confirm.js"></script> <!-- Плагин -->
 
@@ -67,7 +73,7 @@
                     <a class="nav-link curent-info" href="#">
                         На <label id="curent_date"></label> подключилось : <label id="client_count"></label> клиентов.
                     </a>
-                    
+
                 </li>
             </ul>
             <form class="form-inline my-2 my-md-0">
@@ -103,9 +109,14 @@
                                             <button type="button" class="btn btn-outline-secondary" title="">Ручная</button>
                                             <button type="button" class="btn btn-outline-secondary" title="">Реверс</button>
                                         </div>
-                                        @*<div class="btn-group" role="group" aria-label="Third group">
-
-                                            </div>*@
+                                        <div class="btn-group mr-2" role="group" aria-label="Third group">
+                                            <div class="input-group w-75">
+                                                <input type="text" id="find-num-wagon" class="form-control" placeholder="Номер вагона" aria-label="" aria-describedby="">
+                                                <div class="input-group-append">
+                                                    <button class="btn btn-outline-secondary" type="button" id="find-wagon">Найти</button>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </form>
                             </div>
@@ -116,21 +127,14 @@
                     <div class="row">
                         <div class="col-xl-4">
                             <div class="card border-primary">
-                                <div class="card-header">Дерево путей</div>
+                                <div class="card-header">
+                                    <div id="dds-station"></div>
+                                    Дерево путей
+                                </div>
                                 <div class="card-body">
                                     <div class="row">
-                                        <div class="col-xl-12 text-left">
-                                            @*style="overflow-x:scroll"*@
-                                            <table id="tree-way" class="compact hover row-border">
-                                                <thead>
-                                                    <tr>
-                                                        <th colspan="4" style="width:100px">Дерево путей</th>
-                                                        <th>Оператор</th>
-                                                        <th>Кол</th>
-                                                        <th>Макс</th>
-                                                    </tr>
-                                                </thead>
-                                            </table>
+                                        <div class="col-xl-12">
+                                            <div id="tree-way"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -455,10 +459,10 @@
                                                                 <div class="invalid-feedback"></div>
                                                             </div>
                                                             @*<div class="col-xl-6 mb-1 text-left">
-                                                            <label for="operation_detali_sending_stop" class="col-form-label">@IDSRWTResource.title_operation_stop</label>
-                                                            <input type="datetime" class="form-control" id="operation_detali_sending_stop" name="operation_detali_sending_stop" />
-                                                            <div class="invalid-feedback"></div>
-                                                        </div>*@
+                                                                    <label for="operation_detali_sending_stop" class="col-form-label">@IDSRWTResource.title_operation_stop</label>
+                                                                    <input type="datetime" class="form-control" id="operation_detali_sending_stop" name="operation_detali_sending_stop" />
+                                                                    <div class="invalid-feedback"></div>
+                                                                </div>*@
                                                         </div>
                                                     </fieldset>
                                                 </div>
