--- a/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
@@ -41,6 +41,7 @@
     <script>
         var url_incoming = '@Url.Action("Incoming", "Home", new { area = "IDSRWT" })';
         var url_outgoing = '@Url.Action("Outgoing", "Home", new { area = "IDSRWT" })';
+        var url_wsd = '@Url.Action("WSD", "Home", new { area = "IDSRWT" })';
     </script>
 
 }
