--- a/WEB_UI/Content/module/table_tree_way.css
+++ b/WEB_UI/Content/module/table_tree_way.css
@@ -15,7 +15,7 @@ tr.select {
 }
 
     tr.select td.row-select {
-        background: url("../../../Images/idsrwt/wsd/eye-solid.svg") no-repeat center center;
+        background: url("../../Images/idsrwt/wsd/eye-solid.svg") no-repeat center center;
         width: 16px;
     }
     tr.select:hover {
@@ -23,18 +23,18 @@ tr.select {
     }
 
 td.station-control {
-    background: url('../../../Content/DataTables/media/images/details_open.png') no-repeat center center;
+    background: url('../../Content/DataTables/media/images/details_open.png') no-repeat center center;
     width: 20px;
     cursor: pointer;
 }
 
 tr.shown td.station-control {
-    background: url('../../../Content/DataTables/media/images/details_close.png') no-repeat center center;
+    background: url('../../Content/DataTables/media/images/details_close.png') no-repeat center center;
     width: 20px;
 }
 
 td.park-control {
-    background: url('../../../Content/DataTables/media/images/details_open.png') no-repeat center center;
+    background: url('../../Content/DataTables/media/images/details_open.png') no-repeat center center;
     width: 20px;
     cursor: pointer;
 }
@@ -56,47 +56,47 @@ tr[data-tree-area='park'].shown {
     }
 
 tr.shown td.park-control {
-    background: url('../../../Content/DataTables/media/images/details_close.png') no-repeat center center;
+    background: url('../../Content/DataTables/media/images/details_close.png') no-repeat center center;
     width: 20px;
 }
 
 
 td.icon-station {
-    background: url("../../../Images/idsrwt/wsd/station.svg") no-repeat center center;
+    background: url("../../Images/idsrwt/wsd/station.svg") no-repeat center center;
     width: 16px;
     /*    height: 16px;
     margin-right: 5px;*/
 }
 
 .icon-park {
-    background: url("../../../Images/idsrwt/wsd/park.svg") no-repeat center center;
+    background: url("../../Images/idsrwt/wsd/park.svg") no-repeat center center;
     width: 16px;
 /*    height: 16px;
     margin-right: 5px;*/
 }
 
 .icon-way {
-    background: url("../../../Images/idsrwt/wsd/way.png") no-repeat center center;
+    background: url("../../Images/idsrwt/wsd/way.png") no-repeat center center;
     height: 16px !important;
     /*    margin-right: 5px;*/
 }
 
 .icon-tree-open {
-    background: url("../../../Images/idsrwt/wsd/tree_detali.png") no-repeat center center;
+    background: url("../../Images/idsrwt/wsd/tree_detali.png") no-repeat center center;
     width: 16px;
 /*    height: 16px;*/
     /*    margin-right: 5px;*/
 }
 
 .icon-tree-open-end {
-    background: url("../../../Images/idsrwt/wsd/tree_end.png") no-repeat center center;
+    background: url("../../Images/idsrwt/wsd/tree_end.png") no-repeat center center;
     width: 16px;
     /*height: 16px;*/
     /*    margin-right: 5px;*/
 }
 
 .icon-tree-open-skeep {
-    background: url("../../../Images/idsrwt/wsd/tree_skeep.png") no-repeat center center;
+    background: url("../../Images/idsrwt/wsd/tree_skeep.png") no-repeat center center;
     width: 16px;
 /*    height: 16px;*/
     /*    margin-right: 5px;*/
