--- a/WEB_UI/Content/view/idsrwt/wsd.css
+++ b/WEB_UI/Content/view/idsrwt/wsd.css
@@ -58,7 +58,7 @@ body {
     position: fixed !important;
 }
 
-.table td {
+/*.table td {
     padding:.15rem;
 }
 
@@ -92,9 +92,9 @@ tr.shown td.park-control {
     width: 20px;
 }
 
-table.dataTable tbody tr.station {
+table.dataTable tbody tr.station {*/
     /*border: 1px solid #808080;*/
-    background-color: #ddd;
+    /*background-color: #ddd;
     color: #000000;
     text-transform: uppercase;
     font-weight: 600;
@@ -108,10 +108,10 @@ table.dataTable tbody tr.park {
 
 td.station-name {
     text-align: left;
-    white-space: nowrap;
+    white-space: nowrap;*/
     /*overflow: hidden;*/
     /*width:100px;*/
-    font-size: 12px;
+    /*font-size: 12px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
@@ -151,29 +151,29 @@ td.way-name {
 .icon-tree-open {
     background-image: url("../../../Images/idsrwt/wsd/tree_detali.png");
     width: 16px;
-    height: 16px;
+    height: 16px;*/
     /*    margin-right: 5px;*/
-}
+/*}
 
 .icon-tree-open-end {
     background-image: url("../../../Images/idsrwt/wsd/tree_end.png");
     width: 16px;
-    height: 16px;
+    height: 16px;*/
     /*    margin-right: 5px;*/
-}
+/*}
 
 .icon-tree-open-skeep {
     background-image: url("../../../Images/idsrwt/wsd/tree_skeep.png");
     width: 16px;
-    height: 16px;
+    height: 16px;*/
     /*    margin-right: 5px;*/
-}
+/*}
 
 .icon-tree-open-not {
     width: 16px;
-    height: 16px;
+    height: 16px;*/
     /*    margin-right: 5px;*/
-}
+/*}*/
 
 table#wagons-way {
     /*font-size: 13px;*/
