Start module development table_dir_way

--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -32,6 +32,9 @@
     <script src="~/Scripts/module/cblist_station.js"></script>
     <script src="~/Scripts/module/table_tree_way.js"></script>
 
+    <script src="~/Scripts/module/table_dir_way.js"></script>
+
+
     <script src="~/Scripts/plugins/pl_dialog_confirm.js"></script> <!-- Плагин -->
     <script src="~/Scripts/view/idsrwt/test.js"></script>
 
@@ -169,7 +172,8 @@
                                 <div class="card-body" style="font-size:13px">
                                     <div class="row">
                                         <div class="col-xl-12">
-                                            <table id="wagons-way" class="display compact table-striped table-hover" style="width:100%;table-layout: fixed"></table>
+                                            <div id="ways" class="text-left"></div>
+                                            @*<table id="wagons-way" class="display compact table-striped table-hover" style="width:100%;table-layout: fixed"></table>*@
                                         </div>
                                     </div>
                                 </div>
