--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -10,6 +10,8 @@
     <link href="~/Content/module/cblist_station.css" rel="stylesheet" />
     <link href="~/Content/module/table_tree_way.css" rel="stylesheet" />
 
+    <link href="~/Content/module/table_dir_way.css" rel="stylesheet" />
+
 }
 
 @section scripts {
@@ -172,7 +174,7 @@
                                 <div class="card-body" style="font-size:13px">
                                     <div class="row">
                                         <div class="col-xl-12">
-                                            <div id="ways" class="text-left"></div>
+                                            <div id="ways"></div>
                                             @*<table id="wagons-way" class="display compact table-striped table-hover" style="width:100%;table-layout: fixed"></table>*@
                                         </div>
                                     </div>
@@ -182,6 +184,45 @@
                     </div>
                 </div>
                 <div class="card-footer bg-transparent border-dark"></div>
+            </div>
+        </div>
+    </div>
+</div>
+@*Button trigger modal*@
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#em-dir-way">
+    Launch demo modal
+</button>
+@*Modal*@
+<div class="modal fade" id="em-dir-way" tabindex="-1" aria-labelledby="ml-dir-way" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="ml-dir-way">VVV</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form class="needs-validation" novalidate>
+                    <div class="form-row">
+                        <div class="col-xl-12 mb-1">
+                            <div class="alert" id="modal-alert"></div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col-xl-12 mb-1 text-left">
+                            <label for="ref_unit" class="col-form-label">Ремонтируемый агрегат:</label>
+                            <select class="form-control" id="ref_unit" name="ref_unit" required></select>
+                            <div class="invalid-feedback">
+                                Укажите агрегат!
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </div>
