module form dir_way & table dir_way

--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -34,6 +34,7 @@
     <script src="~/Scripts/module/cblist_station.js"></script>
     <script src="~/Scripts/module/table_tree_way.js"></script>
 
+    <script src="~/Scripts/module/form_dir_way.js"></script>
     <script src="~/Scripts/module/table_dir_way.js"></script>
 
 
