--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -214,11 +214,26 @@
                         <div class="col-xl-12 mb-1 text-left">
                             <label for="ref_unit" class="col-form-label">Ремонтируемый агрегат:</label>
                             <select class="form-control" id="ref_unit" name="ref_unit" required></select>
+                            @*<input type="text" />*@
                             <div class="invalid-feedback">
                                 Укажите агрегат!
                             </div>
                         </div>
                     </div>
+                    <div class="form-row">
+                        <div class="col-xl-6 mb-1">
+                            @*<div class="form-group">*@
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                                    <label class="form-check-label" for="invalidCheck2">
+                                        Agree to terms and conditions
+                                    </label>
+                                </div>
+                            @*</div>*@
+                        </div>
+                    </div>
+
+
                 </form>
             </div>
             <div class="modal-footer">
