module form edit  - add element datetime

--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -11,7 +11,7 @@
     <link href="~/Content/module/table_tree_way.css" rel="stylesheet" />
 
     <link href="~/Content/module/table_dir_way.css" rel="stylesheet" />
-
+    <link href="~/Content/module/form_edit_table.css" rel="stylesheet" />
 }
 
 @section scripts {
@@ -214,7 +214,7 @@
                         <div class="col-xl-12 mb-1 text-left">
                             <label for="ref_unit" class="col-form-label">Ремонтируемый агрегат:</label>
                             <select class="form-control" id="ref_unit" name="ref_unit" required></select>
-                            @*<input type="text" />*@
+                            <input type="datetime" />
                             <div class="invalid-feedback">
                                 Укажите агрегат!
                             </div>
