--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -34,7 +34,9 @@
     <script src="~/Scripts/module/cblist_station.js"></script>
     <script src="~/Scripts/module/table_tree_way.js"></script>
 
+    <script src="~/Scripts/module/form_validation.js"></script>
     <script src="~/Scripts/module/form_dir_way.js"></script>
+
     <script src="~/Scripts/module/table_dir_way.js"></script>
 
 
